apps/maxterview/overlays/perf/env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maxterview-backend
spec:
  template:
    spec:
      containers:
        - name: backend
